--- a/Assets/LoginUSS.uss
+++ b/Assets/LoginUSS.uss
@@ -18,27 +18,97 @@
 }
 
 .gear {
-    flex-grow: 1;
     background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Alternative_Colors_4.png?fileID=-8831441479830076655&guid=fc2c96f1421fbe54e82922ae89afef74&type=3#Steampunk_UI_Alternative_Colors_4_6');
+    height: auto;
+    width: auto;
     position: absolute;
-    width: 30%;
-    height: 10%;
-    bottom: 0;
-    left: auto;
-    opacity: 0.75;
-    visibility: visible;
-    overflow: hidden;
-    -unity-background-scale-mode: scale-to-fit;
-    right: 20%;
     top: auto;
-    align-self: auto;
+    left: auto;
+    bottom: 0;
+    right: 20%;
+    min-width: 35%;
+    min-height: 15%;
+    -unity-background-scale-mode: scale-to-fit;
+}
+
+.textfield > .unity-label {
+    align-self: center;
     align-items: auto;
-    flex-direction: column;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
+    top: 30%;
+    background-color: rgba(255, 255, 255, 0);
+    -unity-background-image-tint-color: rgba(56, 56, 56, 0);
+    background-image: none;
+    -unity-font: url('project://database/Assets/Gentleland/SteampunkUI/Fonts/BebasNeue/BebasNeue.ttf?fileID=12800000&guid=843d03ef8be16da4d96629804d86d7f3&type=3#BebasNeue');
+    -unity-font-definition: initial;
+    -unity-font-style: bold;
+    color: rgb(255, 255, 255);
     transform-origin: center;
-    flex-basis: auto;
+    border-left-color: rgb(0, 0, 255);
+    border-right-color: rgb(0, 0, 255);
+    border-top-color: rgb(0, 0, 255);
+    border-bottom-color: rgb(0, 0, 255);
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    -unity-background-scale-mode: stretch-to-fill;
+    -unity-text-align: upper-center;
+    flex-direction: column;
+    font-size: 50px;
+}
+
+.textfield > .unity-base-field__input {
+    width: auto;
+    height: 50%;
+    min-height: 35%;
+    align-self: center;
+    align-items: center;
+    justify-content: flex-start;
+    top: 35%;
+    -unity-background-scale-mode: stretch-to-fill;
+    background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Slots_Arrows.png?fileID=-4972393294115483615&guid=4d6d3e529a32a4141bbac8264745777d&type=3#Steampunk_UI_Slots_Arrows_8');
+    background-color: rgba(255, 195, 100, 0.35);
+    -unity-font: url('project://database/Assets/Gentleland/SteampunkUI/Fonts/Arvo/Arvo.ttf?fileID=12800000&guid=e5c356a4b721b024daa3ce4df25a2a24&type=3#Arvo');
+    -unity-font-definition: initial;
+    -unity-text-align: upper-left;
+    -unity-font-style: normal;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 5%;
+    -unity-slice-scale: 0.7px;
+    max-height: 35%;
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+    -unity-slice-left: 0;
+    -unity-slice-right: 0;
+    -unity-slice-top: 0;
+    margin-right: 0;
+    color: rgb(255, 255, 255);
+    font-size: 260%;
+}
+
+.textfield > .unity-text-element {
+    -unity-font: url('project://database/Assets/Gentleland/SteampunkUI/Fonts/Arvo/Arvo.ttf?fileID=12800000&guid=e5c356a4b721b024daa3ce4df25a2a24&type=3#Arvo');
+    -unity-font-definition: initial;
+    -unity-background-image-tint-color: rgb(56, 56, 56);
+    text-shadow: 0.5px 1px 1px rgb(0, 0, 0);
+    letter-spacing: 0;
+    color: rgb(176, 125, 0);
+    -unity-font-style: bold;
+    text-overflow: ellipsis;
+    -unity-text-align: lower-center;
+}
+
+.textfield {
+    align-self: center;
+    align-items: center;
+    height: 30%;
+    width: 80%;
+    flex-direction: column;
     -unity-slice-scale: 1px;
-    min-width: auto;
-    min-height: auto;
+    position: relative;
+    left: auto;
+    top: auto;
+    flex-grow: 0;
+    flex-shrink: 1;
 }
