--- a/Assets/login2USS.uss
+++ b/Assets/login2USS.uss
@@ -36,7 +36,7 @@
     top: -5%;
     -unity-background-scale-mode: stretch-to-fill;
     background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Slots_Arrows.png?fileID=-4972393294115483615&guid=4d6d3e529a32a4141bbac8264745777d&type=3#Steampunk_UI_Slots_Arrows_8');
-    background-color: rgba(255, 199, 109, 0.4);
+    background-color: rgba(255, 199, 109, 0.31);
     -unity-font: url('project://database/Assets/Gentleland/SteampunkUI/Fonts/Arvo/Arvo.ttf?fileID=12800000&guid=e5c356a4b721b024daa3ce4df25a2a24&type=3#Arvo');
     -unity-font-definition: initial;
     -unity-text-align: upper-left;
@@ -88,4 +88,56 @@
     height: 40%;
     max-height: none;
     justify-content: space-around;
+}
+
+.user-button {
+    background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Buttons_2.png?fileID=6912372366057910295&guid=f85c0b0d6e5acd64185eafcda5d6cba8&type=3#Steampunk_UI_Buttons_2_4');
+    -unity-slice-scale: 0.1px;
+    height: auto;
+    width: auto;
+    -unity-background-scale-mode: stretch-to-fill;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-left-width: 0;
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    background-color: rgba(188, 188, 188, 0);
+    font-size: 35px;
+    -unity-slice-right: 0;
+    -unity-slice-left: 0;
+    -unity-slice-bottom: 0;
+    -unity-slice-top: 0;
+    position: absolute;
+    align-self: auto;
+    bottom: 20%;
+    right: 10%;
+    -unity-font-definition: url('project://database/Assets/Gentleland/SteampunkUI/Fonts/Steam%20Punk%20Flyer%20SDF.asset?fileID=11400000&guid=fa7ca5fa214d542428de5e4814eaf4cb&type=2#Steam Punk Flyer SDF');
+    color: rgb(195, 166, 25);
+    text-shadow: 1px 1px 0 rgb(0, 0, 0);
+    -unity-text-align: middle-center;
+    white-space: nowrap;
+    flex-shrink: 1;
+    flex-grow: 1;
+    max-height: 100px;
+    min-height: 40px;
+    justify-content: flex-start;
+    align-items: auto;
+    max-width: 300px;
+    min-width: 270px;
+    overflow: visible;
+    display: flex;
+}
+
+.user-button:hover {
+    max-width: 340px;
+    max-height: 100px;
+    width: 90%;
+    height: 125%;
+}
+
+.textfield:focus > .unity-base-field__input {
+    background-color: rgba(255, 199, 109, 0.65);
 }
