start of written USS and UIManager update
Store the current user's username when login is successful and display it in lobby UI

--- a/Assets/UI Toolkit/LobbyUSS.uss
+++ b/Assets/UI Toolkit/LobbyUSS.uss
@@ -1,15 +1,59 @@
 * {
     
     -unity-font-definition: url('project://database/Assets/Gentleland/SteampunkUI/Fonts/Steam Punk Flyer.ttf');
+    font-size: 30px;
 }
 
-VisualElement {
-    align-items: auto;
-    flex-grow: 1;
-    flex-basis: auto;
-    align-self: flex-start;
-    position: relative;
-    flex-direction: row;
+
+#main-background{
+    width: 100%;
+    height: 300%;
+    padding: 40% 15%;
+    background-color: rgba(3, 0, 26, 0.8);
+    -unity-background-image-tint-color: rgba(3, 0, 26, 0.6);
+    background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/BackGround.png');
+    -unity-background-scale-mode: stretch-to-fill;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+#panel-background{
+    background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/BackGround.png');
+    -unity-background-scale-mode: stretch-to-fill;
+
+}
+
+#frame{
+    background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Frames_3.png?fileID=0&amp;guid=c3cbd015370c5294385a8d880c234850&amp;type=3#Steampunk_UI_Frames_3_4');
+    -unity-background-scale-mode: stretch-to-fill;
+}
+
+#add-button{
+    width: 50%;
+    height: 60px;
+    margin-top: 10%;
+    align-self: center;
+    -unity-slice-scale: 1px;
+    font-size: 30px;
+    background-color : rgba(0,0,0,0);
+    -unity-background-scale-mode: stretch-to-fill;
+     background-image: url('project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Buttons_2.png?fileID=0&amp;guid=f85c0b0d6e5acd64185eafcda5d6cba8&amp;type=3#Steampunk_UI_Buttons_2_4');    
+ }
+
+.panel-container{
+    justify-content: center;
+    flex-direction: column;
+}
+
+#list-view{
+    align-self: stretch;
+    justify-content: center;
+    align-items: center;
+}
+
+#list-view > * {
+    padding-top: 10%;
 }
 
 
