--- a/Assets/UI Toolkit/UXMLEntryTemplate.uxml
+++ b/Assets/UI Toolkit/UXMLEntryTemplate.uxml
@@ -1,6 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Style src="./LobbyUSS.uss"/>
     <ui:VisualElement name="root" style="align-items:center;">
-        <ui:Label name="test" style="font-size: 15px; color: white;" />
+        <ui:Label name="test" style="font-size: 15px; color: white; padding-top: 10px" />
     </ui:VisualElement>
 </ui:UXML>
