list view issue

--- a/Assets/UI Toolkit/LobbyUSS.uss
+++ b/Assets/UI Toolkit/LobbyUSS.uss
@@ -47,15 +47,19 @@
 }
 
 #list-view{
-    align-self: stretch;
+    
     justify-content: center;
     align-items: center;
 }
 
-#list-view > * {
-    padding-top: 10%;
+#list-view VisualElement {
+    min-height: 40px;
 }
 
+#list-view > *{
+    align-items: auto;
+}
+ 
 
 
 
