--- a/Assets/UI Toolkit/UXMLLoby.uxml
+++ b/Assets/UI Toolkit/UXMLLoby.uxml
@@ -5,8 +5,10 @@
             <ui:VisualElement name="panel-background">
                 <ui:VisualElement name="frame">
                     <ui:VisualElement name="list-panel" >
+                        <ui:Label name="list-title" text="Connected Users" style="-unity-text-align: center; align-self: center; color: white; margin-bottom: 60px;"/>
                         <ui:ListView name="list-view"/>
                     </ui:VisualElement>
+                    <ui:Button name="disconnect-button" class="user-button" text="DISCONNECT" style="position: absolute; bottom: 15%; right: 10%"/>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
